# cellsparse-core

./: .gitignore  README.md  pyproject.toml
scripts/: train.py
src/cellsparse/: __init__.py  utils.py
src/cellsparse/runners/: __init__.py  base.py  cellpose_runner.py  elephant_runner.py  stardist_runner.py
