[tool.poetry]
name = "cellsparse"
version = "0.1.0"
description = ""
authors = ["Ko Sugawara <ko.sugawara@ens-lyon.fr>"]
readme = "README.md"
packages = [{include = "cellsparse", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
stardist = {git = "https://github.com/ksugar/stardist-sparse.git"}
torch = "2.0.1"
cellpose = {git = "https://github.com/ksugar/cellpose-sparse.git"}
dill = "^0.3.6"
elephant = { git = "https://github.com/elephant-track/elephant-server.git", branch = "sparse",  subdirectory = "elephant-core" }

[tool.poetry.group.tensorflow.dependencies]
tensorflow = "2.12.0"

[tool.poetry.group.tensorflow-macos.dependencies]
tensorflow-macos = "2.12.0"
tensorflow-metal = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
