[tool.poetry]
name = "cellsparse"
version = "0.1.0"
description = ""
authors = ["Ko Sugawara <ko.sugawara@ens-lyon.fr>"]
readme = "README.md"
packages = [{include = "cellsparse", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
stardist = {git = "https://github.com/ksugar/stardist-sparse.git"}
torch = "2.0.1"
tensorflow = {version = "2.12.0", optional = true}
tensorflow-macos = {version = "2.12.0", optional = true}
tensorflow-metal = {version = "^1.0.0", optional = true}
cellpose = {git = "https://github.com/ksugar/cellpose-sparse.git"}
dill = "^0.3.6"
elephant = { git = "https://github.com/elephant-track/elephant-server.git", branch = "sparse",  subdirectory = "elephant-core" }

[tool.poetry.extras]
tensorflow = ["tensorflow"]
tensorflow-macos = ["tensorflow-macos", "tensorflow-metal"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
